Update some stuff

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>David Johnston - Videogames</title>
+  <title>David Karr Johnston</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <link rel='shortcut icon' type='image/png' href='favicon.png' />
@@ -46,10 +46,10 @@
       <header id="header">
         <div id="logo">
           <h2>
-            David Johnston
+            David Karr Johnston
           </h2>
           <h4>
-            Game Programmer
+            Software Engineer
           </h4>
         </div>
       </header>
@@ -66,6 +66,9 @@
           </li>
           <li class='tab' id="tab-about">
             <a href="#about"><i class="fa fa-user"></i><span> About Me</span></a>
+          </li>
+          <li class='tab'>
+            <a href="https://www.bunchanonsense.com"><i class="fa-regular fa-pen"></i><span> Blog / Newsletter</span></a>
           </li>
           <li class='tab' style="display: none;">
             <a href="#contact"><i class="fa fa-envelope"></i><span> Contact</span></a>
@@ -106,13 +109,13 @@
                 </div>
                 <div class="info">
                   <h2>
-                    David Johnston
+                    David Karr Johnston
                   </h2>
                   <h4>
-                    Game Programmer
+                    Software Engineer
                   </h4>
                   <p>
-                  Hi! I'm a game programmer currently living in Brooklyn, NY. I love math, literature, <a href="http://nuts4nuts.com/" target="_blank">Nuts4Nuts</a>, writing implements and Prince. I get excited about tiny things. My life's goal is to raise a child near <a href="http://www.play-scapes.com/play-design/contemporary-design/woodthorpe-grange-playground-keita-takahashi-nottingham-uk-proposed/" target="_blank">Keita Takahashi's eventual playground.</a>
+                  Hi! I'm a software engineer currently living in Brooklyn, NY. I love math, literature, <a href="http://nuts4nuts.com/" target="_blank">Nuts4Nuts</a>, writing implements and Prince. I get excited about tiny things. My life's goal is to raise a child near <a href="http://www.play-scapes.com/play-design/contemporary-design/woodthorpe-grange-playground-keita-takahashi-nottingham-uk-proposed/" target="_blank">Keita Takahashi's eventual playground.</a>
                   </p>
                 </div>
               </div>
@@ -120,7 +123,7 @@
               <div class="contact-info">
                 <div class="g7">
                   <div class="image-small-left">
-                    <a href="mailto:dvdjoh@gmail.com" target="_blank">
+                    <a href="mailto:website@dkj.io" target="_blank">
                       <img src="http://www.madesimpleforme.com/images/email-icon.png" alt=""></a>
                   </div>
                 </div>
@@ -873,7 +876,7 @@
                   </div>
                   <div class="sny-icon-content">
                     <h4>Reaching me</h4>
-                    <p>(917) 922-0978<br>dvdjoh@gmail.com</p>
+                    <p>website@dkj.io</p>
                   </div>
                 </div>
               </div>
@@ -897,7 +900,7 @@
       <!-- End Tab Container -->
       <footer>
         <p>
-        David Karr Johnston / (917) 922-0978 / dvdjoh@gmail.com
+        David Karr Johnston / website@dkj.io
         </p>
       </footer>
     </div><!-- #main -->
