Update blog tab

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <a href="#about"><i class="fa fa-user"></i><span> About Me</span></a>
           </li>
           <li class='tab'>
-            <a href="https://www.bunchanonsense.com" target="_blank"><i class="fa fa-pen"></i><span> Blog / Newsletter</span></a>
+            <a href="#blog"><i class="fa fa-pen"></i><span> Blog / Newsletter</span></a>
           </li>
           <li class='tab' style="display: none;">
             <a href="#contact"><i class="fa fa-envelope"></i><span> Contact</span></a>
@@ -123,7 +123,7 @@
               <div class="contact-info">
                 <div class="g7">
                   <div class="image-small-left">
-                    <a href="mailto:website@dkj.io" target="_blank">
+                    <a href="mailto:email@dkj.io" target="_blank">
                       <img src="http://www.madesimpleforme.com/images/email-icon.png" alt=""></a>
                   </div>
                 </div>
@@ -358,6 +358,25 @@
             </section>
           </div>
           <!-- End Resume Tab Data -->
+          <!-- End Blog Tab Data -->
+          <div id="blog">
+            <section class="clearfix">
+              <div class="g3">
+                <div class="photo">
+                    <a href="https://bunchanonsense.com"><img src="images/BNlogosite.png" alt="Buncha Nonsense logo"></a>
+                </div>
+                <div class="info">
+                  <h3>
+                    Buncha Nonsense
+                  </h3>
+                  <p>
+                    I periodically write a blog / newsletter about projects I'm working on called Buncha Nonsense. <a href="https://bunchanonsense.com">Check it out!</a>
+                  </p>
+                </div>
+              </div>
+            </section>
+          </div>
+          <!-- End Blog Tab Data -->
           <!-- Portfolio Tab Data -->
           <div class="portfolioContainer" id="portfolio">
             <section class="clearfix">
@@ -876,7 +895,7 @@
                   </div>
                   <div class="sny-icon-content">
                     <h4>Reaching me</h4>
-                    <p>website@dkj.io</p>
+                    <p>email@dkj.io</p>
                   </div>
                 </div>
               </div>
@@ -900,7 +919,7 @@
       <!-- End Tab Container -->
       <footer>
         <p>
-        David Karr Johnston / website@dkj.io
+        David Karr Johnston / email@dkj.io
         </p>
       </footer>
     </div><!-- #main -->
