--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <a href="#about"><i class="fa fa-user"></i><span> About Me</span></a>
           </li>
           <li class='tab'>
-            <a href="#blog"><i class="fa fa-pen"></i><span> Blog / Newsletter</span></a>
+            <a href="#blog"><i class="fa fa-pencil-square"></i><span> Blog / Newsletter</span></a>
           </li>
           <li class='tab' style="display: none;">
             <a href="#contact"><i class="fa fa-envelope"></i><span> Contact</span></a>
